@@ -12,6 +12,10 @@ description:
  If you run this check on a cluster node, it will raise no warning if the cluster node state
  differs from {active}.
 
+ Since version 11.2 you are able to configure the node states. Default values are:
+ unknown will be treated as UNKNOWN, offline as CRIT, forced offline as CRIT,
+ standby as OK and active as OK.
+
 inventory:
  Creates on service
 
