@@ -480,6 +480,19 @@ register_check_parameters(
                 default_value = "active_standby"
              )
             ),
+            ("v11_2_states",
+                Dictionary(
+                    title = _("Interpretation of failover cluster state"),
+                    help  = _("Here you can set the failover state for BIG-IP system of version 11.2.0"),
+                    elements = [
+                        ("0", MonitoringState(title = "Unknown", default_value = 3)),
+                        ("1", MonitoringState(title = "Offline", default_value = 2)),
+                        ("2", MonitoringState(title = "Forced offline", default_value = 2)),
+                        ("3", MonitoringState(title = "Standby", default_value = 0)),
+                        ("4", MonitoringState(title = "Active", default_value = 0)),
+                    ]
+                )
+            )
         ],
         required_keys = ["type"]
     ),
